@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-12-09T16:27:33Z",
+  "timestamp" : "2022-12-10T01:36:05Z",
   "count_outdated" : 918,
   "uniques_outdated" : 483,
-  "count" : 930,
+  "count" : 931,
   "uniques" : 489,
   "clones" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-12-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
