@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 3,
   "clones": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2022-12-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
